fix/text-redation-misalignment

--- a/polaris-ui/src/styles.scss
+++ b/polaris-ui/src/styles.scss
@@ -48,13 +48,4 @@ $fullHeightWidth: 100% !important;
 
 .canvasWrapper canvas {
   height: $fullHeightWidth;
-  width: $fullHeightWidth;
-}
-
-.pdfViewer .page {
-  width: $heightWidthPercentage;
-
-  .textLayer {
-    width: $fullHeightWidth;
-  }
 }
